welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:13: error: not found: value avancer
  avancer(2)
  ^